# inverted_pacman

./: .gitignore  Mensages.md  Mensajes.md  README.md  Requisitos.md  sampleusers.txt  test.ipynb
.github/workflows/: c-cpp.yml
Client_Unity/: Assembly-CSharp.csproj  Client_Unity.sln  carloslog.txt  chatdata.json  client.json  fitolog.txt  log.txt  pepalog.txt  sergiolog.txt
Client_Unity/Assets/: AnimacionesUI.cs  ChatBehaviour.cs  ChatData.cs  ChatManager.cs  GameManager.cs  GameManagerSN.cs  GameManagerWO.cs  GoldTMP.asset  History.cs  Invitarbtn.prefab  MainGameManager.cs  MainMenu.cs  Management.cs  Map.cs  MenuCanvas.cs  MenuPause.cs  PlayerMovement.cs  SlimeMovement.cs  Slime_Movement.cs  SplashScenes.cs  Teamates.cs  backbuttonchat.cs  chatdata.asset  chooseplayers.cs  cliente.asset  conected.cs  delete.cs  invitaarbtn.prefab  invitarbtn.cs  invitation.cs  logginbutton.cs  m6x11 SDF.asset  manageinvitacion.cs  message.prefab  playonline.cs  quit.cs  registerbutton.cs  scrip.cs
Client_Unity/Assets/Animations/: ImageTransition.controller  Inicio.anim  TransicionEscena.controller  transitionEntry.anim
Client_Unity/Assets/Buttons/: PanelBackpng.xcf
Client_Unity/Assets/FlappyBird/Scripts/: GameManagerFB.cs  Pipes.cs  Player.cs
Client_Unity/Assets/Prefabs/: Client.prefab  InfoPartida.prefab  Invitarbtn.prefab  LoadScene.prefab  Player.prefab  Text (TMP).prefab  Usuario.prefab  invitaarbtn.prefab  message.prefab
Client_Unity/Assets/PrefabsPacman/: Node.prefab  Pellet.prefab  PowerPellet.prefab
Client_Unity/Assets/SNAKE/: Food.cs  GameManagerGO.cs  Snake.cs  SnakeSegment.prefab
Client_Unity/Assets/Scenes/: Chat.unity  Conectados.unity  FlappyBird.unity  Game.unity  GameOver.unity  HelpFlappy.unity  HelpGame.unity  HelpMenuPlay.unity  HelpOfflineMenu.unity  HelpOnlineMenu.unity  HelpSnake.unity  History.unity  Invitacion.unity  Invitar.unity  LoadScene.cs  LoadScene.prefab  Loading.unity  Login.unity  Menu.unity  MenuInvitation.unity  MenuPlay.unity  OnlineMenu.unity  PacmanIndividual.unity  PlayOffline.unity  PlayOnline.unity  Register.unity  SampleScene.unity  Snake.unity  Splash1.unity  Splash2.unity  Splash3.unity  Teamates.unity  WGame.unity  WarGame.unity  WarningWGame.unity
Client_Unity/Assets/Scenes/Game/: NavMesh-NavMesh 1.asset
Client_Unity/Assets/Scriptable objects/: MainGameManager.asset  chatdata.asset  cliente.asset
Client_Unity/Assets/Scriptable ogjects/: chatdata.asset  cliente.asset
Client_Unity/Assets/ScriptsPacmanIndividual/: AnimatedSprites.cs  GameManagerPMI.cs  Movement.cs
Client_Unity/Assets/SpritesPacmanIndividual/Sprites/: Tile_Pacman_Palette.prefab
Client_Unity/Assets/Tiles/Ground/: jawbreaker_tiles_10.asset  jawbreaker_tiles_11.asset  jawbreaker_tiles_13.asset  jawbreaker_tiles_14.asset  jawbreaker_tiles_15.asset  jawbreaker_tiles_16.asset  jawbreaker_tiles_18.asset  jawbreaker_tiles_21.asset  jawbreaker_tiles_22.asset  jawbreaker_tiles_27.asset  jawbreaker_tiles_28.asset  jawbreaker_tiles_29.asset  jawbreaker_tiles_31.asset  jawbreaker_tiles_35.asset  jawbreaker_tiles_36.asset  jawbreaker_tiles_37.asset  jawbreaker_tiles_38.asset  jawbreaker_tiles_39.asset  jawbreaker_tiles_4.asset  jawbreaker_tiles_40.asset  jawbreaker_tiles_42.asset  (+15 more)
Client_Unity/Assets/TilesPacmanIndividual/: Node_Tile.asset  Pellet_Tile.asset  PowerPellet_Tile.asset  Wall_00 1.asset  Wall_01 1.asset  Wall_02 1.asset  Wall_03 1.asset  Wall_04 1.asset  Wall_05 1.asset  Wall_06 1.asset  Wall_07 1.asset  Wall_08 1.asset  Wall_09 1.asset  Wall_10 1.asset  Wall_11 1.asset  Wall_12 1.asset  Wall_13 1.asset  Wall_14 1.asset  Wall_15 1.asset  Wall_16 1.asset  Wall_17 1.asset  Wall_18 1.asset  Wall_19 1.asset  Wall_21 1.asset  Wall_23 1.asset  Wall_27 1.asset  Wall_28 1.asset  Wall_29 1.asset
Client_Unity/Assets/UI Toolkit/: PanelSettings.asset
Client_Unity/Assets/colors/: Invite.asset
Client_Unity/Assets/jawbreaker/: map.prefab
Client_Unity/Assets/map/: Ground_pallet.prefab  Map.prefab  Map_generator.cs
Client_Unity/Assets/scripts/: BulletScript.cs  CameraScript.cs  ChatData.cs  Client.cs  Conected.cs  GameManagerWO.cs  GameOver.cs  GruntScript.cs  History.cs  JohnMovement.cs  LoadScene.cs  LoginRegister.cs  MainGameManager.cs  MainMenu.cs  Management.cs  PlayerMovement.cs  SlimeMovement.cs  SplashScenes.cs  chat.cs  delete.cs  invitarbtn.cs  invitation.cs  loading.cs  logginbutton.cs  manageinvitacion.cs  player.cs  quit.cs  registerbutton.cs
Client_Unity/ProjectSettings/: EditorBuildSettings.asset  NavMeshAreas.asset  Physics2DSettings.asset  ProjectSettings.asset  TagManager.asset
Client_Unity/Temp/: workerlic
Client_Unity/Temp/__Backupscenes/: 0.backup
Client_Unity/UserSettings/: EditorUserSettings.asset
Client_Unity/UserSettings/Layouts/: CurrentMaximizeLayout.dwlt  default-2021.dwlt
Cliente_test/: inverted_pacman - Acceso directo.lnk
Cliente_test/Cliente/: LogIn.Designer.cs  LogIn.cs  Program.cs  Register.Designer.cs  Register.cs  Version 1.csproj  Version 1.sln  walls.py
Cliente_test/Cliente/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Resources.resx  Settings.Designer.cs
cliente python/: cliente.py  cliente2.py  simpleclient.py  singleclient.py
server/: CMakeLists.txt
server/output/: main
server/resources/: tiles.json
server/resources/images/: Untitled.xcf
server/sergio.gomez.damas@shiva.upc.es/: FuncionRanking.c  FuncionRanking.h  Makefile.common  Makefile.w32  Readme.md  auth.h  chat.h  config.h  connected_list.c  connected_list.h  database.sql  logger.h  main.c  map.c  partida.c  partida.h  server.zpr
server/server/: CMakeLists.txt  FuncionRanking.c  FuncionRanking.h  Makefile  Makefile.common  add_game.c  add_game.h  anadir_partido.c  auth  auth.c  auth.h  chat.c  chat.h  config.h  connected_list.c  connected_list.h  database.sql  linked_list.c  linked_list.h  logger.c  logger.h  main.c  main.h  map.c  map.h  partida.c  partida.h  peticiones.c  peticiones.h  server.c  server.zpr  test  test.c
server/server/Build.lnx/: logger.txt
server/server/include/: server.h
server/tests/: test_server.c
(+248 files in other folders)
